--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script type="application/javascript" src="questions.js"></script>
-	<meta property="og:url" content="https://discordlacommune.github.io/politiscales/" />
-	<meta property="og:title" content="PolitiScales" />
+	<meta property="og:url" content="https://" />
+	<meta property="og:title" content="Mailing" />
 	<meta property="og:locale" content="fr_FR" />
-	<meta property="og:description" content="PolitiScales est un test politique utilisant 8 axes idéologiques pour vous aider à vos situer politiquement, ou simplement partager votre profil avec vos amis." />
-	<meta property="og:image" content="https://discordlacommune.github.io/politiscales/images/facebook-preview.png" />
+	<meta property="og:description" content="Mailing" />
+	<meta property="og:image" content="https://" />
 
 </head>
 <body>
@@ -20,7 +20,7 @@
 <header>
 	<div id="header">
 		<div class="headerLeft"><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a> <a href="help.html"><i class="fa fa-question-circle-o " aria-hidden="true"></i></a></div><!--
-		--><div class="headerMiddle"><h1><a href="index.html">PolitiScales</a></h1></div><!--
+		--><div class="headerMiddle"><h1><a href="index.html">Mailing</a></h1></div><!--
 		--><div class="headerRight"><a href="https://twitter.com/PolitiScales"><i class="fa fa-twitter" aria-hidden="true"></i></a></div>
 	</div>
 </header>
